--- a/src/views/login.html
+++ b/src/views/login.html
@@ -141,11 +141,11 @@
           <div class="content col-2">
             <form action="javascript:void(0)" id="Login" data-gtm-form-interact-id="2">
               <div class="form-group">
-                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email"
+                <input class="form-input datos" type="email" name="email" id="email" required="" placeholder="Email"
                   data-gtm-form-interact-field-id="2">
               </div>
               <div class="form-group">
-                <input class="form-input" type="password" name="password" id="password" required=""
+                <input class="form-input datos" type="password" name="password" id="password" required=""
                   placeholder="Contraseña" data-gtm-form-interact-field-id="3">
               </div>
             </form>
@@ -168,7 +168,7 @@
           <div class="content col-2">
             <form action="javascript:void(0)" id="PassRec" data-gtm-form-interact-id="0">
               <div class="form-group">
-                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email"
+                <input class="form-input datos" type="email" name="email" id="email" required="" placeholder="Email"
                   data-gtm-form-interact-field-id="0">
               </div>
             </form>
@@ -185,7 +185,7 @@
           <div class="content col-2">
             <form action="javascript:void(0)" id="Activation" data-gtm-form-interact-id="1">
               <div class="form-group">
-                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email"
+                <input class="form-input datos" type="email" name="email" id="email" required="" placeholder="Email"
                   data-gtm-form-interact-field-id="1">
               </div>
             </form>
