--- a/src/views/register.html
+++ b/src/views/register.html
@@ -85,31 +85,31 @@
           <div class="content col-2">
             <form action="javascript:void(0)" id="Register">
               <div class="form-group">
-                <input class="form-input" type="email" id="email" name="email" required="" placeholder="Email">
+                <input class="form-input datos" type="email" id="email" name="email" required="" placeholder="Email">
               </div>
               <div class="form-group">
-                <input class="form-input" type="password" id="password" name="password" required=""
+                <input class="form-input datos" type="password" id="password" name="password" required=""
                   placeholder="Contraseña">
               </div>
-              <div class="form-group">
-                <input class="form-input" type="password" id="password2" name="password2" required=""
+              <div class="form-group ">
+                <input class="form-input datos" type="password" id="password2" name="password2" required=""
                   placeholder="Confirmar contraseña">
               </div>
               <div class="info">
                 <div class="item">Información personal</div>
               </div>
               <div class="form-group">
-                <input class="form-input" type="text" id="nombre" name="nombre" required="" placeholder="Nombre">
+                <input class="form-input datos" type="text" id="nombre" name="nombre" required="" placeholder="Nombre">
               </div>
               <div class="form-group">
-                <input class="form-input" type="text" id="apellido" name="apellido" required="" placeholder="Apellido">
+                <input class="form-input datos" type="text" id="apellido" name="apellido" required="" placeholder="Apellido">
               </div>
               <div class="form-group">
-                <input class="form-input" type="number" id="dni" name="dni" required=""
+                <input class="form-input datos" type="number" id="dni" name="dni" required=""
                   placeholder="Número de DNI o CUIT">
               </div>
               <div class="form-group">
-                <input class="form-input" type="number" id="tel" name="tel" required=""
+                <input class="form-input datos" type="number" id="tel" name="tel" required=""
                   placeholder="Número de teléfono">
               </div>
               <input type="hidden" id="express" name="express" value="0">
