--- a/src/views/login.html
+++ b/src/views/login.html
@@ -25,7 +25,8 @@
   <header>
     <div class="contenedor-header">
       <div id="logo" class="logo-header img-header">
-        <img src="/images/PowerCore.svg" alt="PowerCore">
+        <img id="logo1" src="/images/PowerCore.svg" alt="PowerCore">
+        <img id="logo2" src="/images/PowerCore_large.svg" alt="PowerCore">
       </div>
       <div id="search" class="form-search">
         <form class="header-form" action="#" method="GET">
