aplico barra a breadcrum

--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -75,7 +75,7 @@
     </div>
   </header>
   <main class="cont air-v">
-    <div class="breadcrumb" style="color: blueviolet;font-size: 12px;">
+    <div class="breadcrumb">
         <a href="/" itemprop="itemListElement" typeof="ListItem">
             <span itemprop="item">
                 <span itemprop="name">HOME</span>
@@ -96,13 +96,8 @@
                 <meta itemprop="position" content="3">
             </span>
         </a>
-        <span class="sep"> /</span>
-        <span itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <span itemprop="item">
-                <span itemprop="name">PC ARMADA AMD ATHLON 3000G + 8GB + 240GB + KIT</span>
-                <meta itemprop="position" content="4">
-            </span>
-        </span>
+       
+        
     </div>
 
     <div class="product">
