--- a/public/css/style.css
+++ b/public/css/style.css
@@ -295,7 +295,15 @@ main {
   padding-right: 15px;
 }
 
-
+.breadcrumb{
+  background-color: #363062;
+  border-top: 1px solid #6f63c7;
+  height: 35px;
+  width: 100%;
+  color:white;
+  padding-left: 5px;
+  padding-top: 5px;
+}
 /* register */
 .account {
   width: 100%;
