--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -76,7 +76,7 @@
   </header>
   <main>
     <div class="cont air-v">
-      <div class="breadcrumb" style="color: blueviolet;font-size: 12px;">
+      <div class="breadcrumb">
         <a href="/">HOME</a> <span class="sep"> /CARRITO</span>
       </div>
       <div role="alert" id="success" style="display:none"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Carrito
