--- a/public/css/style.css
+++ b/public/css/style.css
@@ -701,7 +701,7 @@ body {
 .nav-item {
   display: flex;
   flex-direction: column;
-  width: 20%;
+  max-width: 6rem;
   text-align: center;
   padding: 0.7rem;
   color: #FFF;
