activando ejs al trabajo de grupo

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -44,16 +44,16 @@
           <li><a href="#">Contacto</a></li>
         </ul>
         <ul class="nav-bar">
-          <li><a href="/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
-          <li><a href="/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
-          <li><a href="/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
+          <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
+          <li><a href="/products/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
         </ul>
       </nav>
     </div>
     <div class="mob__navbar">
       <div class="nav-item home">
         <a href="/">
-          <img class="img-nav" src="images/PowerCore.svg" alt="">
+          <img class="img-nav" src="/images/PowerCore.svg" alt="">
         </a>
       </div>
       <div class="nav-item">
@@ -63,7 +63,7 @@
         </button>
       </div>
       <div class="nav-item">
-        <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
+        <a href="/products/productCart"><i class="fa-solid fa-cart-shopping"></i>
           <br>
           Carrito</a>
       </div>
@@ -82,14 +82,14 @@
       <h2>Productos Destacados</h2>
       <div class="card__wrapper">
         <div class="product__card">
-          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/productDetail">
+            <a href="/products/productDetail">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -98,14 +98,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 2"></a>
+          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/productDetail">
+            <a href="/products/productDetail">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -114,14 +114,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/productDetail">
+            <a href="/products/productDetail">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -130,14 +130,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/productDetail">
+            <a href="/products/productDetail">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -146,14 +146,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/productDetail">
+            <a href="/products/productDetail">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -162,14 +162,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/productDetail">
+            <a href="/products/productDetail">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -178,14 +178,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/productDetail">
+            <a href="/products/productDetail">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -194,14 +194,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/productDetail">
+            <a href="/products/productDetail">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -210,14 +210,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/productDetail">
+            <a href="/products/productDetail">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -226,14 +226,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/productDetail">
+            <a href="/products/productDetail">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -241,6 +241,7 @@
             </button>
           </div>
         </div>
+        
       </div>
       </div>
     </section>
