--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -44,16 +44,16 @@
           <li><a href="#">Contacto</a></li>
         </ul>
         <ul class="nav-bar">
-          <li><a href="/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
-          <li><a href="/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
-          <li><a href="/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
+          <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
+          <li><a href="/products/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
         </ul>
       </nav>
     </div>
     <div class="mob__navbar">
       <div class="nav-item home">
         <a href="/">
-          <img class="img-nav" src="images/PowerCore.svg" alt="">
+          <img class="img-nav" src="/images/PowerCore.svg" alt="">
         </a>
       </div>
       <div class="nav-item">
@@ -63,7 +63,7 @@
         </button>
       </div>
       <div class="nav-item">
-        <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
+        <a href="/products/productCart"><i class="fa-solid fa-cart-shopping"></i>
           <br>
           Carrito</a>
       </div>
@@ -98,7 +98,7 @@
         </div>
         <div class="item">
           <div class="image">
-            <a href="#"><img src="images/productos/placeholder.png" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit"></a>
+            <a href="#"><img src="/images/productos/placeholder.png" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit"></a>
           </div>
           <div class="meta">
             <div class="title"><a href="#">
