--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -44,16 +44,16 @@
           <li><a href="#">Contacto</a></li>
         </ul>
         <ul class="nav-bar">
-          <li><a href="/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
-          <li><a href="/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
-          <li><a href="/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
+          <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
+          <li><a href="/products/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
         </ul>
       </nav>
     </div>
     <div class="mob__navbar">
       <div class="nav-item home">
         <a href="/">
-          <img class="img-nav" src="images/PowerCore.svg" alt="">
+          <img class="img-nav" src="/images/PowerCore.svg" alt="">
         </a>
       </div>
       <div class="nav-item">
@@ -63,7 +63,7 @@
         </button>
       </div>
       <div class="nav-item">
-        <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
+        <a href="/products/productCart"><i class="fa-solid fa-cart-shopping"></i>
           <br>
           Carrito</a>
       </div>
@@ -90,7 +90,7 @@
             </span>
         </a>
         <span class="sep"> /</span>
-        <a href="images/productos/placeholder.png" itemprop="itemListElement" typeof="ListItem">
+        <a href="/images/productos/placeholder.png" itemprop="itemListElement" typeof="ListItem">
             <span itemprop="item">
                 <span itemprop="name"> PC ARMADA AMD ATHLON </span>
                 <meta itemprop="position" content="3">
@@ -103,11 +103,11 @@
     <div class="product">
         <div class="img air">
             <div class="featured">
-                <img id="mainpic" src="images/productos/placeholder.png" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
+                <img id="mainpic" src="/images/productos/placeholder.png" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
             </div>
             <div class="more">
                 <div class="item">
-                    <img src="images/productos/placeholder.png" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
+                    <img src="/images/productos/placeholder.png" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
                 </div>
                 <!-- Additional images gallery -->
             </div>
@@ -182,7 +182,7 @@
                 <div class="item product-xs">
                     <a href="/prod/11063/pc-armada-amd-athlon-3000g-8gb-1tb-ssd-monitor-22">
                         <div class="image-full">
-                            <img src="images/productos/placeholder.png"alt="pc-armada-amd-athlon-3000g-8gb-1tb-ssd-monitor-22">
+                            <img src="/images/productos/placeholder.png"alt="pc-armada-amd-athlon-3000g-8gb-1tb-ssd-monitor-22">
                         </div>
                         <div class="info">
                             <h3 class="tituloalto" style="height: 55px;">PC ARMADA AMD ATHLON 3000G+8GB+1TB SSD+MONITOR 22"</h3>
