rutas con ejs habilitadas

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -46,7 +46,7 @@
         <ul class="nav-bar">
           <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
           <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
-          <li><a href="/products/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="/products/show">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
         </ul>
       </nav>
     </div>
@@ -63,7 +63,7 @@
         </button>
       </div>
       <div class="nav-item">
-        <a href="/products/productCart"><i class="fa-solid fa-cart-shopping"></i>
+        <a href="/products/show"><i class="fa-solid fa-cart-shopping"></i>
           <br>
           Carrito</a>
       </div>
@@ -82,14 +82,14 @@
       <h2>Productos Destacados</h2>
       <div class="card__wrapper">
         <div class="product__card">
-          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/1/show"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/products/productDetail">
+            <a href="/products/1/show">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/1/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -98,14 +98,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/1/show"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/products/productDetail">
+            <a href="/products/1/show">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/1/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -114,14 +114,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/1/show"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/products/productDetail">
+            <a href="/products/1/show">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/1/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -130,14 +130,14 @@
           </div>
         </div>
         <div class="product__card">
-          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
+          <a href="/products/1/show"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">categoría</p>
-            <a href="/products/productDetail">
+            <a href="/products/1/show">
               <h3 class="product__name">Nombre y modelo del producto</h3>
             </a>
             <p class="product__price">$100000</p>
-            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <a href="/products/1/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
             <button class="btn btn-primary">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -145,102 +145,7 @@
             </button>
           </div>
         </div>
-        <div class="product__card">
-          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
-          <div class="product__description">
-            <p class="product__cathegory">categoría</p>
-            <a href="/products/productDetail">
-              <h3 class="product__name">Nombre y modelo del producto</h3>
-            </a>
-            <p class="product__price">$100000</p>
-            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
-              <span>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-              </span>
-            </button>
-          </div>
-        </div>
-        <div class="product__card">
-          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
-          <div class="product__description">
-            <p class="product__cathegory">categoría</p>
-            <a href="/products/productDetail">
-              <h3 class="product__name">Nombre y modelo del producto</h3>
-            </a>
-            <p class="product__price">$100000</p>
-            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
-              <span>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-              </span>
-            </button>
-          </div>
-        </div>
-        <div class="product__card">
-          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
-          <div class="product__description">
-            <p class="product__cathegory">categoría</p>
-            <a href="/products/productDetail">
-              <h3 class="product__name">Nombre y modelo del producto</h3>
-            </a>
-            <p class="product__price">$100000</p>
-            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
-              <span>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-              </span>
-            </button>
-          </div>
-        </div>
-        <div class="product__card">
-          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
-          <div class="product__description">
-            <p class="product__cathegory">categoría</p>
-            <a href="/products/productDetail">
-              <h3 class="product__name">Nombre y modelo del producto</h3>
-            </a>
-            <p class="product__price">$100000</p>
-            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
-              <span>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-              </span>
-            </button>
-          </div>
-        </div>
-        <div class="product__card">
-          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
-          <div class="product__description">
-            <p class="product__cathegory">categoría</p>
-            <a href="/products/productDetail">
-              <h3 class="product__name">Nombre y modelo del producto</h3>
-            </a>
-            <p class="product__price">$100000</p>
-            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
-              <span>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-              </span>
-            </button>
-          </div>
-        </div>
-        <div class="product__card">
-          <a href="/products/productDetail"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
-          <div class="product__description">
-            <p class="product__cathegory">categoría</p>
-            <a href="/products/productDetail">
-              <h3 class="product__name">Nombre y modelo del producto</h3>
-            </a>
-            <p class="product__price">$100000</p>
-            <a href="/products/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
-              <span>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-              </span>
-            </button>
-          </div>
-        </div>
+        
         
       </div>
       </div>
