--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -46,7 +46,7 @@
         <ul class="nav-bar">
           <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
           <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
-          <li><a href="/products/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="/products/show">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
         </ul>
       </nav>
     </div>
@@ -63,7 +63,7 @@
         </button>
       </div>
       <div class="nav-item">
-        <a href="/products/productCart"><i class="fa-solid fa-cart-shopping"></i>
+        <a href="/products/show"><i class="fa-solid fa-cart-shopping"></i>
           <br>
           Carrito</a>
       </div>
