activando partials en footer

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -133,9 +133,7 @@
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2024 PowerCore. Trabajo grupal N&deg; 5.</p>
-  </footer>
+  <%- include('./partials/footer') %>
 
   <script>
     function toggleUserMenu() {
