--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -136,9 +136,7 @@
     </div>
   </main>
 
-  <footer>
-    <p>&copy; 2024 PowerCore. Trabajo grupal N&deg; 5.</p>
-  </footer>
+  <%- include('../partials/footer') %>
 
   <script>
     function toggleUserMenu() {
