--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -183,9 +183,7 @@
     </div>
   </main>
 
-  <footer>
-    <p>&copy; 2024 PowerCore. Trabajo grupal N&deg; 5.</p>
-  </footer>
+  <%- include('../partials/footer') %>
 
   <script>
     function toggleUserMenu() {
