--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-  <%- include('./partials/head') %>
-
+  <%- include('./partials/head',{'titulo':datos.titulo}) %>
+  
 <body>
   <header>
     <div class="contenedor-header">
@@ -133,7 +133,7 @@
     </section>
   </main>
 
-  <%- include('./partials/footer') %>
+  <%- include('./partials/footer',{'pie':datos.pie}) %>
 
   <script>
     function toggleUserMenu() {
