--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="XT-PC">
-    <title>PowerCore</title>
+    <title><%= titulo %></title>
     <meta name="description" content="Compra los productos para tu pc gamer en el sitio número uno de Argentina">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
