--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es-AR">
 
-<%- include('../partials/head') %>
+<%- include('../partials/head',{'titulo':datos.titulo}) %>
 
 <body>
   <header>
@@ -186,7 +186,7 @@
     </div>
 </main>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/footer',{'pie':datos.pie}) %>
 
   <script>
     function toggleUserMenu() {
