--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -134,24 +134,9 @@
   </main>
 
   <%- include('./partials/footer',{'pie':datos.pie}) %>
+  <%- include('./partials/script') %>
 
-  <script>
-    function toggleUserMenu() {
-      document.getElementById('user-menu').classList.toggle('show');
-    }
-
-    window.onclick = function (event) {
-      if (!event.target.matches('.fa-user')) {
-        var dropdowns = document.getElementsByClassName("user-menu");
-        for (var i = 0; i < dropdowns.length; i++) {
-          var openDropdown = dropdowns[i];
-          if (openDropdown.classList.contains('show')) {
-            openDropdown.classList.remove('show');
-          }
-        }
-      }
-    }
-  </script>
+  
 </body>
 
 </html>
