--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -138,23 +138,7 @@
 
   <%- include('../partials/footer',{'pie':datos.pie}) %>
 
-  <script>
-    function toggleUserMenu() {
-      document.getElementById('user-menu').classList.toggle('show');
-    }
-
-    window.onclick = function (event) {
-      if (!event.target.matches('.fa-user')) {
-        var dropdowns = document.getElementsByClassName("user-menu");
-        for (var i = 0; i < dropdowns.length; i++) {
-          var openDropdown = dropdowns[i];
-          if (openDropdown.classList.contains('show')) {
-            openDropdown.classList.remove('show');
-          }
-        }
-      }
-    }
-  </script>
+  <%- include('./partials/script') %>
 </body>
 
 </html>
