corrijo url en include de script

--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -126,7 +126,7 @@
 
   <%- include('../partials/footer',{'pie':datos.pie}) %>
 
-  <%- include('./partials/script') %>
+  <%- include('../partials/script') %>
 </body>
 
 </html>
