--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -138,7 +138,7 @@
 
   <%- include('../partials/footer',{'pie':datos.pie}) %>
 
-  <%- include('./partials/script') %>
+  <%- include('../partials/script') %>
 </body>
 
 </html>
