--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -188,7 +188,7 @@
 
 <%- include('../partials/footer',{'pie':datos.pie}) %>
 
-<%- include('./partials/script') %>
+<%- include('../partials/script') %>
 </body>
 
 </html>
