--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -185,7 +185,7 @@
 
   <%- include('../partials/footer',{'pie':datos.pie}) %>
 
-  <%- include('./partials/script') %>
+  <%- include('../partials/script') %>
 </body>
 
 </html>
