--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -62,70 +62,26 @@
     <section id="products__section">
       <h2>Productos Destacados</h2>
       <div class="card__wrapper">
-        <div class="product__card">
-          <a href="/products/1/show"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
-          <div class="product__description">
-            <p class="product__cathegory">categoría</p>
-            <a href="/products/1/show">
-              <h3 class="product__name">Nombre y modelo del producto</h3>
-            </a>
-            <p class="product__price">$100000</p>
-            <a href="/products/1/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
-              <span>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-              </span>
-            </button>
+        <% for(let product of products){ %>
+          <div class="product__card">
+            <a href="/products/<%= product.id %>/show"><img src="<%= product.image %>" alt="Producto 1"></a>
+            <div class="product__description">
+              <p class="product__cathegory"><%= product.category %></p>
+              <a href="/products/<%= product.id %>/show">
+                <h3 class="product__name"><%= product.name %></h3>
+              </a>
+              <p class="product__price">$<%= product.price %></p>
+              <a href="/products/<%= product.id %>/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
+              <button class="btn btn-primary">Agregar al
+                <span>
+                  <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+                </span>
+              </button>
+            </div>
           </div>
-        </div>
-        <div class="product__card">
-          <a href="/products/1/show"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
-          <div class="product__description">
-            <p class="product__cathegory">categoría</p>
-            <a href="/products/1/show">
-              <h3 class="product__name">Nombre y modelo del producto</h3>
-            </a>
-            <p class="product__price">$100000</p>
-            <a href="/products/1/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
-              <span>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-              </span>
-            </button>
-          </div>
-        </div>
-        <div class="product__card">
-          <a href="/products/1/show"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
-          <div class="product__description">
-            <p class="product__cathegory">categoría</p>
-            <a href="/products/1/show">
-              <h3 class="product__name">Nombre y modelo del producto</h3>
-            </a>
-            <p class="product__price">$100000</p>
-            <a href="/products/1/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
-              <span>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-              </span>
-            </button>
-          </div>
-        </div>
-        <div class="product__card">
-          <a href="/products/1/show"><img src="/images/productos/placeholder.png" alt="Producto 1"></a>
-          <div class="product__description">
-            <p class="product__cathegory">categoría</p>
-            <a href="/products/1/show">
-              <h3 class="product__name">Nombre y modelo del producto</h3>
-            </a>
-            <p class="product__price">$100000</p>
-            <a href="/products/1/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
-              <span>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-              </span>
-            </button>
-          </div>
-        </div>
+        <% } %>
+
+
         
         
       </div>
