--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -64,14 +64,14 @@
       <div class="card__wrapper">
         <% for(let product of products){ %>
           <div class="product__card">
-            <a href="/products/<%= product.id %>/show"><img src="<%= product.image %>" alt="Producto 1"></a>
+            <a href="/products/<%= product.productId %>/show"><img src="<%= product.image %>" alt="Producto 1"></a>
             <div class="product__description">
               <p class="product__cathegory"><%= product.category %></p>
-              <a href="/products/<%= product.id %>/show">
+              <a href="/products/<%= product.productId %>/show">
                 <h3 class="product__name"><%= product.name %></h3>
               </a>
               <p class="product__price">$<%= product.price %></p>
-              <a href="/products/<%= product.id %>/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
+              <a href="/products/<%= product.productId %>/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
               <button class="btn btn-primary">Agregar al
                 <span>
                   <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
