--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -80,7 +80,7 @@
         </div>
         <div class="item">
           <div class="image">
-            <a href="#"><img src="/images/productos/placeholder.png" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit"></a>
+            <a href="#"><img src="/images/products/foto1.jpg" alt="aqui texto de imagen"></a>
           </div>
           <div class="meta">
             <div class="title"><a href="#">
