--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -65,44 +65,45 @@
           <h3>Registro de usuario</h3>
           <hr>
           <div class="content col-2">
-            <form action="javascript:void(0)" id="Register">
-              <div class="form-group">
-                <input class="form-input datos" type="email" id="email" name="email" required="" placeholder="Email">
+            <form action="/users/create" id="Register" method="post">
+                <div class="form-group">
+                  <input class="form-input datos" type="email" id="email" name="email" required="" placeholder="Email">
+                </div>
+                <div class="form-group">
+                  <input class="form-input datos" type="password" id="password" name="password" required=""
+                    placeholder="Contraseña">
+                </div>
+                <div class="form-group ">
+                  <input class="form-input datos" type="password" id="password2" name="password2" required=""
+                    placeholder="Confirmar contraseña">
+                </div>
+                <div class="info">
+                  <div class="item">Información personal</div>
+                </div>
+                <div class="form-group">
+                  <input class="form-input datos" type="text" id="nombre" name="nombre" required="" placeholder="Nombre">
+                </div>
+                <div class="form-group">
+                  <input class="form-input datos" type="text" id="apellido" name="apellido" required="" placeholder="Apellido">
+                </div>
+                <div class="form-group">
+                  <input class="form-input datos" type="number" id="dni" name="dni" required=""
+                    placeholder="Número de DNI o CUIT">
+                </div>
+                <div class="form-group">
+                  <input class="form-input datos" type="number" id="tel" name="tel" required=""
+                    placeholder="Número de teléfono">
+                </div>
+                <input type="hidden" id="express" name="express" value="0">
+              
               </div>
-              <div class="form-group">
-                <input class="form-input datos" type="password" id="password" name="password" required=""
-                  placeholder="Contraseña">
+              <div class="cta">
+                <div>
+                  <div id="loader" class="loader" style="display:none"></div>
+                  <input type="submit" id="myBtn" name="myBtn"  class="btn btn-accent">
+                </div>
               </div>
-              <div class="form-group ">
-                <input class="form-input datos" type="password" id="password2" name="password2" required=""
-                  placeholder="Confirmar contraseña">
-              </div>
-              <div class="info">
-                <div class="item">Información personal</div>
-              </div>
-              <div class="form-group">
-                <input class="form-input datos" type="text" id="nombre" name="nombre" required="" placeholder="Nombre">
-              </div>
-              <div class="form-group">
-                <input class="form-input datos" type="text" id="apellido" name="apellido" required="" placeholder="Apellido">
-              </div>
-              <div class="form-group">
-                <input class="form-input datos" type="number" id="dni" name="dni" required=""
-                  placeholder="Número de DNI o CUIT">
-              </div>
-              <div class="form-group">
-                <input class="form-input datos" type="number" id="tel" name="tel" required=""
-                  placeholder="Número de teléfono">
-              </div>
-              <input type="hidden" id="express" name="express" value="0">
             </form>
-          </div>
-          <div class="cta">
-            <div>
-              <div id="loader" class="loader" style="display:none"></div>
-              <a id="myBtn" onclick="register()" class="btn btn-accent">Enviar</a>
-            </div>
-          </div>
         </div>
 
       </div>
