--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,8 +11,8 @@
       </div>
       <div id="search" class="form-search">
         <form class="header-form" action="#" method="GET">
-          <input placeholder="Buscar productos, marcas y más" type="text">
-          <a href="#"><i class="fa fa-search"></i></a>
+          <input class="search-bar" placeholder="Buscar productos, marcas y más" type="search">
+         <button class="search-bar-icon" type="submit"><i class="fa fa-search"></i></button>
         </form>
       </div>
     </div>
