cambiando rutas de verbos en endpoint a minuscula o uso de guiones

--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -28,7 +28,7 @@
         <ul class="nav-bar">
           <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
           <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
-          <li><a href="/products/show">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="/products/cart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
         </ul>
       </nav>
     </div>
@@ -45,7 +45,7 @@
         </button>
       </div>
       <div class="nav-item">
-        <a href="/products/show"><i class="fa-solid fa-cart-shopping"></i>
+        <a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i>
           <br>
           Carrito</a>
       </div>
