--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -27,7 +27,7 @@
         <ul class="nav-bar">
           <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
           <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
-          <li><a href="/products/show">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="/products/cart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
         </ul>
       </nav>
     </div>
@@ -44,7 +44,7 @@
         </button>
       </div>
       <div class="nav-item">
-        <a href="/products/show"><i class="fa-solid fa-cart-shopping"></i>
+        <a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i>
           <br>
           Carrito</a>
       </div>
@@ -64,14 +64,14 @@
       <div class="card__wrapper">
         <% for(let product of products){ %>
           <div class="product__card">
-            <a href="/products/<%= product.productId %>/show"><img src="<%= product.image %>" alt="Producto 1"></a>
+            <a href="/products/<%= product.productId %>"><img src="<%= product.image %>" alt="Producto 1"></a>
             <div class="product__description">
               <p class="product__cathegory"><%= product.category %></p>
-              <a href="/products/<%= product.productId %>/show">
+              <a href="/products/<%= product.productId %>">
                 <h3 class="product__name"><%= product.name %></h3>
               </a>
               <p class="product__price">$<%= product.price %></p>
-              <a href="/products/<%= product.productId %>/show"><i class="fas fa-info-circle"></i>Ver detalles</a>
+              <a href="/products/<%= product.productId %>"><i class="fas fa-info-circle"></i>Ver detalles</a>
               <button class="btn btn-primary">Agregar al
                 <span>
                   <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
